# m0_Ticker

./: .eslintrc.json  BROADCAST_DESIGN.md  BROWSER_TESTING_REPORT.md  COMPREHENSIVE_PROJECT_REVIEW.md  CRITICAL_FIXES_REPORT.md  DASHBOARD_FIXES_COMPLETE.md  DASHBOARD_IMPROVEMENTS.md  DASHBOARD_REDESIGN_ANALYSIS.md  DASHBOARD_TRANSFORMATION_REPORT.md  DESIGN_SYSTEM.md  ENHANCEMENT_REPORT.md  GSAP_INTEGRATION_REVIEW.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_REPORT.md  MODERNIZATION_COMPLETE.md  MODULARIZATION_PLAN.md  MODULAR_IMPLEMENTATION_STATUS.md  NEW_DASHBOARD_GUIDE.md  OPTIMIZATION_PLAN.md  OPTIMIZATION_RESULTS.md  PERFECT_CODE_QUALITY_REPORT.md  PROFESSIONAL_DESIGN_IMPLEMENTATION.md  PROJECT_REVIEW_ANALYSIS.md  PROJECT_REVIEW_FIXES.md  PROJECT_STATUS.md  README.md  SYSTEM_VERIFICATION_COMPLETE.md  TESTING_COMPLETE.md  browser-test.sh  debug-ws.html  demo-broadcast.sh  eslint.config.cjs  package-lock.json  package.json  pyproject.toml  run-and-open.bat  run-and-open.sh  server-old.js  server.js  start-server.bat  (+3 more)
archive/: dashboard-broadcast.html  output-broadcast.html  output-pro.html
backup/: README.md  index.html  m0_Ticker.7z  output.html  package-lock.json  package.json  server.js
public/: analytics.html  dashboard-broadcast.html  dashboard-clean.html  dashboard-merged.html  dashboard-new.html  dashboard-optimized.html  dashboard-pro.html  dashboard-ultimate.html  dashboard-v2.html  dashboard-widget-hub.html  dashboard.html  enhanced-features-test.html  fixed-dashboard.html  gsap-demo.html  index.html  output-broadcast.html  output-clean.html  output.html  (+8 more)
(+78 files in other folders)
